--- a/2_codebook.Rmd
+++ b/2_codebook.Rmd
@@ -11,213 +11,12 @@ output:
 
 ```{r helper}
 source("0_helpers.R")
-<<<<<<< HEAD
-<<<<<<< HEAD
-library(dplyr)
-=======
-alldata_birthorder = readRDS("data/alldata_birthorder.rds")
->>>>>>> parent of ce11a31... updated sample effects
+birthorder = readRDS("data/birthorder.rds")
 knitr::opts_chunk$set(error = TRUE)
-```
-
-
-## Data
-```{r}
-### Import alldata used for birthorder and g-factors computed
-alldata_birthorder = readRDS("data/alldata_birthorder.rds")
-
-=======
-alldata_birthorder = readRDS("data/alldata_birthorder.rds")
-knitr::opts_chunk$set(error = TRUE)
-```
-
-
-## Data
-```{r}
-### Import alldata used for birthorder and g-factors computed
-alldata_birthorder = readRDS("data/alldata_birthorder.rds")
-
->>>>>>> parent of ce11a31... updated sample effects
-colnames(alldata_birthorder)
-crosstabs(alldata_birthorder$any_multiple_birth)
-## For the imputation we want to clean the dataset and get rid of all uninteresting data
-alldata_birthorder = alldata_birthorder %>%
-  filter(!is.na(pidlink)) %>% # no individuals who are only known from the pregnancy file
-  filter(is.na(lifebirths) | lifebirths == 2) %>% # remove 7 and 2 individuals who are known as stillbirth or miscarriage but still have PID
-  select(-lifebirths) %>% 
-  filter(!is.na(mother_pidlink)) %>% 
-  select(-father_pidlink) %>% 
-  filter(is.na(any_multiple_birth) | any_multiple_birth != 1) %>% # remove 7 and 2 individuals who are known as stillbirth or miscarriage but still have PID
-  select(-starts_with("age_"), -wave, -any_multiple_birth, -multiple_birth) %>% 
-  mutate(money_spent_smoking_log = if_else(is.na(money_spent_smoking_log) & ever_smoked == 0, 0, money_spent_smoking_log),
-         amount = if_else(is.na(amount) & ever_smoked == 0, 0, amount),
-         amount_still_smokers = if_else(is.na(amount_still_smokers) &  still_smoking == 0, 0, amount_still_smokers),
-<<<<<<< HEAD
-<<<<<<< HEAD
-         birthyear = lubridate::year(birthdate))
-
-# recode Factor Variable as Dummy Variable
-birthorder = left_join(birthorder,
-                                birthorder %>%
-                                  filter(!is.na(Category)) %>%
-                                  mutate(var = 1) %>%
-                                  dplyr::select(pidlink, Category, var) %>%
-                                  spread(Category, var, fill = 0, sep = "_"), by = "pidlink") %>%
-  dplyr::select(-Category)
-
-# recode Factor Variable as Dummy Variable
-birthorder = left_join(birthorder,
-                                birthorder %>%
-                                  filter(!is.na(Sector)) %>%
-                                  mutate(var = 1) %>%
-                                  dplyr::select(pidlink, Sector, var) %>%
-                                  spread(Sector, var, fill = 0, sep = "_"), by = "pidlink") %>%
-  dplyr::select(-Sector)
-
-### Variables
-birthorder = birthorder %>%
-  mutate(
-    # center variables that are used for analysis
-  g_factor_2015_old = scale(g_factor_2015_old),
-  g_factor_2015_young = scale(g_factor_2015_young),
-  g_factor_2007_old = scale(g_factor_2007_old),
-  g_factor_2007_young = scale(g_factor_2007_young),
-  raven_2015_old = scale(raven_2015_old),
-  math_2015_old = scale(math_2015_old),
-  count_backwards = scale(count_backwards),
-  raven_2015_young = scale(raven_2015_young),
-  math_2015_young = scale(math_2015_young),
-  words_remembered_avg = scale(words_remembered_avg),
-  words_immediate = scale(words_immediate),
-  words_delayed = scale(words_delayed),
-  adaptive_numbering = scale(adaptive_numbering),
-  raven_2007_old = scale(raven_2007_old),
-  math_2007_old = scale(math_2007_old),
-  raven_2007_young = scale(raven_2007_young),
-  math_2007_young = scale(math_2007_young),
-  riskA = scale(riskA),
-  riskB = scale(riskB),
-  years_of_education_z = scale(years_of_education),
-  Total_score_highest_z = scale(Total_score_highest),
-  wage_last_month_z = scale(wage_last_month_log),
-  wage_last_year_z = scale(wage_last_year_log),
-  big5_ext = scale(big5_ext),
-  big5_con = scale(big5_con),
-  big5_agree = scale(big5_agree),
-  big5_open = scale(big5_open),
-  big5_neu = scale(big5_neu),
-  attended_school = as.integer(attended_school),
-  attended_school = ifelse(attended_school == 1, 0,
-                           ifelse(attended_school == 2, 1, NA)))
-
-
-### Birthorder and Sibling Count
-birthorder = birthorder %>% 
-  mutate(
-# birthorder as factors with levels of 1, 2, 3, 4, 5, >5
-    birthorder_naive_factor = as.character(birthorder_naive),
-    birthorder_naive_factor = ifelse(birthorder_naive > 5, ">5",
-                                            birthorder_naive_factor),
-    birthorder_naive_factor = factor(birthorder_naive_factor, 
-                                            levels = c("1","2","3","4","5",">5")),
-    sibling_count_naive_factor = as.character(sibling_count_naive),
-    sibling_count_naive_factor = ifelse(sibling_count_naive > 5, ">5",
-                                               sibling_count_naive_factor),
-    sibling_count_naive_factor = factor(sibling_count_naive_factor, 
-                                               levels = c("2","3","4","5",">5")),
-
-    birthorder_uterus_alive_factor = as.character(birthorder_uterus_alive),
-    birthorder_uterus_alive_factor = ifelse(birthorder_uterus_alive > 5, ">5",
-                                            birthorder_uterus_alive_factor),
-    birthorder_uterus_alive_factor = factor(birthorder_uterus_alive_factor, 
-                                            levels = c("1","2","3","4","5",">5")),
-    sibling_count_uterus_alive_factor = as.character(sibling_count_uterus_alive),
-    sibling_count_uterus_alive_factor = ifelse(sibling_count_uterus_alive > 5, ">5",
-                                               sibling_count_uterus_alive_factor),
-    sibling_count_uterus_alive_factor = factor(sibling_count_uterus_alive_factor, 
-                                               levels = c("2","3","4","5",">5")),
-    birthorder_uterus_preg_factor = as.character(birthorder_uterus_preg),
-    birthorder_uterus_preg_factor = ifelse(birthorder_uterus_preg > 5, ">5",
-                                           birthorder_uterus_preg_factor),
-    birthorder_uterus_preg_factor = factor(birthorder_uterus_preg_factor,
-                                           levels = c("1","2","3","4","5",">5")),
-    sibling_count_uterus_preg_factor = as.character(sibling_count_uterus_preg),
-    sibling_count_uterus_preg_factor = ifelse(sibling_count_uterus_preg > 5, ">5",
-                                              sibling_count_uterus_preg_factor),
-    sibling_count_uterus_preg_factor = factor(sibling_count_uterus_preg_factor, 
-                                              levels = c("2","3","4","5",">5")),
-    birthorder_genes_factor = as.character(birthorder_genes),
-    birthorder_genes_factor = ifelse(birthorder_genes >5 , ">5", birthorder_genes_factor),
-    birthorder_genes_factor = factor(birthorder_genes_factor, 
-                                     levels = c("1","2","3","4","5",">5")),
-    sibling_count_genes_factor = as.character(sibling_count_genes),
-    sibling_count_genes_factor = ifelse(sibling_count_genes >5 , ">5",
-                                        sibling_count_genes_factor),
-    sibling_count_genes_factor = factor(sibling_count_genes_factor, 
-                                        levels = c("2","3","4","5",">5")),
-    # interaction birthorder * siblingcout for each birthorder
-    count_birthorder_naive =
-      factor(str_replace(as.character(interaction(birthorder_naive_factor,                                                              sibling_count_naive_factor)),
-                        "\\.", "/"),
-                                           levels =   c("1/2","2/2", "1/3",  "2/3",
-                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
-                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
-                                                        "1/>5", "2/>5", "3/>5", "4/>5",
-                                                        "5/>5", ">5/>5")),
-    count_birthorder_uterus_alive =
-      factor(str_replace(as.character(interaction(birthorder_uterus_alive_factor,                                                              sibling_count_uterus_alive_factor)),
-                        "\\.", "/"),
-                                           levels =   c("1/2","2/2", "1/3",  "2/3",
-                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
-                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
-                                                        "1/>5", "2/>5", "3/>5", "4/>5",
-                                                        "5/>5", ">5/>5")),
-    count_birthorder_uterus_preg =
-      factor(str_replace(as.character(interaction(birthorder_uterus_preg_factor,                                                              sibling_count_uterus_preg_factor)), 
-                         "\\.", "/"),
-                                           levels =   c("1/2","2/2", "1/3",  "2/3",
-                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
-                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
-                                                        "1/>5", "2/>5", "3/>5", "4/>5",
-                                                        "5/>5", ">5/>5")),
-    count_birthorder_genes =
-      factor(str_replace(as.character(interaction(birthorder_genes_factor,                                                              sibling_count_genes_factor)), "\\.", "/"),
-                                           levels =   c("1/2","2/2", "1/3",  "2/3",
-                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
-                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
-                                                        "1/>5", "2/>5", "3/>5", "4/>5",
-                                                        "5/>5", ">5/>5")))
-
-birthorder <- birthorder %>%
-                     mutate(sibling_count = sibling_count_naive_factor,
-                            birth_order_nonlinear = birthorder_naive_factor,
-                            birth_order = birthorder_naive,
-                            count_birth_order = count_birthorder_naive)
-
-=======
-         birthyear = lubridate::year(birthdate)) %>% 
-  select(-birthdate, -hhid14_9, -hhid14_9.x, -hhid14_9.y)
->>>>>>> parent of ce11a31... updated sample effects
-```
-
-```{r}
-<<<<<<< HEAD
-colnames(birthorder)
-birthorder = birthorder %>% dplyr::select(wave, chron_order_birth, lifebirths, multiple_birth, alive, birthdate, any_multiple_birth, birthorder_uterus_preg, sibling_count_uterus_preg, birthorder_uterus_alive, sibling_count_uterus_alive, birthorder_genes, sibling_count_genes, age, sibling_count_naive_ind, birthorder_naive, sibling_count_naive, starts_with("raven_"), starts_with("math_"), words_immediate, words_delayed, words_remembered_avg, adaptive_numbering, count_backwards, starts_with("g_factor_"), riskA, riskB, attended_school, highest_education, years_of_education, Elementary_worked, Self_employed, ever_smoked, still_smoking, male, birthyear, starts_with("Category_"), starts_with("Sector"), starts_with("big5_"), years_of_education_z, wage_last_month_z, wage_last_year_z, birthorder_naive_factor, sibling_count_naive_factor, birthorder_uterus_alive_factor, sibling_count_uterus_alive_factor, birthorder_uterus_preg_factor, sibling_count_uterus_preg_factor, birthorder_genes_factor, sibling_count_genes_factor, count_birthorder_naive, count_birthorder_uterus_alive, count_birthorder_uterus_preg, count_birthorder_genes)
-
-writexl::write_xlsx(codebook::codebook_table(birthorder), path = "codebook.xlsx")
-=======
-library(codebook)
-codebook(alldata_birthorder)
->>>>>>> parent of ce11a31... updated sample effects
-=======
-         birthyear = lubridate::year(birthdate)) %>% 
-  select(-birthdate, -hhid14_9, -hhid14_9.x, -hhid14_9.y)
 ```
 
 ```{r}
 library(codebook)
-codebook(alldata_birthorder)
->>>>>>> parent of ce11a31... updated sample effects
+codebook(birthorder)
 ```
 
